--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,24 @@
 body{
   background-image: url('../src/assets/Artboard\ 11.png');
+  /* background-image: url('../src/assets/bgwaves.jpeg'); */
   background-size: cover;
   justify-content: center;
+  background-repeat: no-repeat;
+  font-family: 'Fondamento', cursive;
+}
+
+h1{
+  font-family: 'Fondamento', cursive!important;
+}
+
+h2{
+  font-family: 'Fondamento', cursive!important;
+  font-size: 24px!important;
+  letter-spacing: -0.5px;
+}
+
+.hide{
+  display: none!important;
 }
 
 .flex{
@@ -9,9 +26,24 @@ body{
 
 }
 
-.cc{
+.flex-col-mid{
+  display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  height: 100%;
+}
+
+.cc{
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-width: 1080px;
+  margin: auto;
+}
+
+.cc-center{
+  justify-content: center;
 }
 
 .vert{
@@ -20,4 +52,58 @@ body{
 
 .m-auto{
   margin: auto;
+}
+
+ul{
+  list-style-type: none;
+  padding-left: 0;
+  margin-top: 0;
+  text-align: center;
+}
+
+.card {
+  /* Set the width and height for the card */
+  width: 237px;
+  height: 384px;
+  position: relative;
+  perspective: 1000px; /* Adjust this value for different depths */
+  cursor: pointer;
+
+  /* Set styles for both faces of the card */
+  .card-face {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    backface-visibility: hidden;
+    transition: transform 0.6s;
+  }
+
+  /* Styles for the front face */
+  .card-front {
+    /* Set the front face styles like background, border, etc. */
+    /* Ensure the front face is visible by default */
+    transform: rotateY(0deg);
+  }
+
+  /* Styles for the back face */
+  .card-back {
+    /* Set the back face styles */
+    transform: rotateY(180deg); /* Initially hidden */
+    background-image: url('../src/assets/cardback.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 17px;
+    width: 237px;
+    height: 384px;
+  }
+
+  /* When flipped, show the back face */
+  &.is-flipped .card-front {
+    transform: rotateY(180deg);
+  }
+
+  /* When flipped, hide the front face */
+  &.is-flipped .card-back {
+    transform: rotateY(0deg);
+  }
 }
