--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url('../assets/Artboard\ 11.png');
+  background-image: url('../docs/assets/Artboard11.png');
   /* background-image: url('../src/assets/bgwaves.jpeg'); */
   background-size: cover;
   justify-content: center;
