--- a/src/App.css
+++ b/src/App.css
@@ -133,22 +133,28 @@ ul{
   .card img{
     width: 100%;
     max-width: 237px;
+
   }
 
   .card {
-    /* Set the width and height for the card */
     width: 100%;
     height: 267px;
+    display: flex;
+    justify-content: center;
   }
 
   .card-back {
-    width: 100%;
-    height: 267px;
+    width: 100%!important;
+    max-width: 183px!important;
+    height: 297px!important;
   }
   .css-7g2ab1-MuiTypography-root{
     left: 0;
     top: 11px;
   }
+
+
+
 
 }
 
@@ -178,8 +184,8 @@ ul{
   }
 
   .card-back {
-    width: 100%;
-    height: 300px;
+    max-width: 152px!important;
+    height: 247px!important;
   }
 
 }
@@ -226,6 +232,18 @@ ul{
   .css-32kc7p-MuiTypography-root{
     margin-top: 12px!important;
     font-size: 26px!important;
+  }
+
+  h1{
+    padding: 0 24px;
+  }
+
+  h6{
+    font-size: 16px!important;
+  }
+
+  li{
+    font-size: 12px!important;
   }
 
 }
